toddler-type/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toddler-type
  namespace: toddler-type
spec:
  selector:
    app: toddler-type
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
